force-app/main/default/objects/Storefront_Item_Setup__c/Storefront_Item_Setup__c.object-meta.xml
<CustomObject>
    <label>Storefront Item Setup</label>
    <nameField>
        <displayFormat>SISN-{0000}</displayFormat>
        <label>Storefront Item Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storefront Item Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>