force-app/main/default/objects/Storefront_Item_Setup__c/fields/External_Id_Setups__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Setups__c</fullName>
    <externalId>true</externalId>
    <label>External Id Setups</label>
    <length>20</length>
    <type>Text</type>
</CustomField>