force-app/main/default/objects/Storefront_Item_Setup__c/fields/Storefront_Item__c.field-meta.xml
<CustomField>
    <fullName>Storefront_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Storefront Item</label>
    <referenceTo>Storefront_Item__c</referenceTo>
    <relationshipLabel>Storefront Item Setups</relationshipLabel>
    <relationshipName>Storefront_Item_Setups</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>