force-app/main/default/objects/Storefront_Item_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Title__c</columns>
    <columns>External_Id__c</columns>
    <columns>Time__c</columns>
    <columns>External_Id_Setups__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>